--- a/customize.html
+++ b/customize.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Customize Cube</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sprites.css">
 </head>
 <body>
     <h1>Select Your Cube</h1>
