--- a/shop.html
+++ b/shop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Shop</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sprites.css">
 </head>
 <body>
     <h1>Cube Shop</h1>
