--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <div class="menu-container">
         <h1>Rhythm Dash</h1>
         <button onclick="window.location.href='game.html'">Play</button>
-        <button onclick="window.location.href='customize.html'">Customize</button>
-        <button onclick="window.location.href='shop.html'">Shop</button>
+
+        <div class="icon-bar">
+            <div class="icon icon-sound" title="Sound"></div>
+            <div class="icon icon-music" title="Music"></div>
+            <div class="icon icon-settings" title="Settings"></div>
+        </div>
     </div>
 </body>
 </html>
