--- a/game.html
+++ b/game.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Rhythm Dash - Game</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Rhythm Dash - Game</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <canvas id="gameCanvas"></canvas>
-    <script type="module" src="scripts/game.js"></script>
+  <!-- Top-right UI Icons -->
+  <div class="game-ui">
+    <div class="icon icon-sound" title="Sound"></div>
+    <div class="icon icon-music" title="Music"></div>
+    <div class="icon icon-settings" title="Settings"></div>
+  </div>
+
+  <!-- Progress Bar at Bottom -->
+  <div class="progress-container">
+    <div class="progress-bar"></div>
+  </div>
+
+  <!-- Gameplay Canvas -->
+  <canvas id="gameCanvas"></canvas>
+
+  <!-- Main Game Script -->
+  <script type="module">
+    import './scripts/game.js';
+
+    const levelDuration = 90 * 1000; // 90 seconds
+    const progressBar = document.querySelector('.progress-bar');
+    const startTime = performance.now();
+
+    function updateProgressBar() {
+      const elapsed = performance.now() - startTime;
+      const progress = Math.min(elapsed / levelDuration, 1);
+      progressBar.style.width = (progress * 100) + '%';
+    }
+
+    function gameLoop() {
+      updateProgressBar();
+      requestAnimationFrame(gameLoop);
+    }
+
+    gameLoop();
+  </script>
 </body>
 </html>
