--- a/game.html
+++ b/game.html
@@ -13,10 +13,10 @@
     <div class="icon icon-settings" title="Settings"></div>
   </div>
 
-  <!-- Progress Bar at Bottom -->
-  <div class="progress-container">
-    <div class="progress-bar"></div>
-  </div>
+  <div id="level-progress-container">
+    <div id="level-progress-bar"></div>
+</div>
+
 
   <!-- Gameplay Canvas -->
   <canvas id="gameCanvas"></canvas>
