--- a/game.html
+++ b/game.html
@@ -18,8 +18,9 @@
 </div>
 
 
-  <!-- Gameplay Canvas -->
-  <canvas id="gameCanvas"></canvas>
+  <canvas id="gameCanvas" width="800" height="400"></canvas>
+
+ <audio id="bgMusic" src="assets/musiclvl1.mp3"></audio>
 
   <!-- Main Game Script -->
   <script type="module">
